# MagnetToSeedbox

./: Cargo.toml
src/: magnet.rs  main.rs
