[package]
name = "magnet_convert"
version = "0.1.0"
authors = ["Haut"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ssh2 = "0.8.2"
regex = "1.3.9"
clap = "2.33.1"
yaml-rust = "0.4.4"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3